Complete the preoficial welcome page

--- a/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
+++ b/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
@@ -1,7 +1,7 @@
 <form #zentraderAuthForm="ngForm">
   <div class="form-group">
     <label for="username">Username</label>
-    <input type="text" class="form-control form-control-sm" id="username" [(ngModel)]="userCredential.username" name="username">
+    <input type="text" class="form-control form-control-sm" id="username" placeholder="What is the username?" [(ngModel)]="userCredential.username" name="username">
     <small id="usernameHelp" class="form-text text-muted">Only the selected ones have an account.</small>
   </div>
 
