--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -14,6 +14,8 @@
         <a class="p-2 text-dark" href="/learning">Learning</a>
       </div>
     </div>
+
   </nav>
+  <zen-logoff></zen-logoff>
   <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
 </div>
