Identify who made the operation

--- a/src/app/operation/experience-card/experience-card.component.html
+++ b/src/app/operation/experience-card/experience-card.component.html
@@ -2,9 +2,12 @@
   <div class="card-body">
     <div class="row card-title">
       <div class="col-10">
-        <a href="http://www.fundamentus.com.br/detalhes.php?papel={{ experience.stock_data.code }}" target="_blank">{{ experience.stock_data.code }}</a>-{{ experience.stock_data.name }} ({{ experience.stock_data.owned }}) - {{ experience.nickname }} 
+        <a href="http://www.fundamentus.com.br/detalhes.php?papel={{ experience.stock_data.code }}" target="_blank">{{
+          experience.stock_data.code }}</a>-{{ experience.stock_data.name }} ({{ experience.stock_data.owned }}) - {{
+        experience.nickname }} 
 
         <span title="{{ getDateLapse(experience.creation_date) }}">({{ experience.creation_date | date: "dd.MM.y" }})</span>
+        [{{ experience.owner_data.username }}]
       </div>
       <div class="col-1">
         <zen-note-modal [operation_pk]="experience.pk"></zen-note-modal>
