--- a/src/app/operation/buy-card/buy-card.component.html
+++ b/src/app/operation/buy-card/buy-card.component.html
@@ -5,7 +5,7 @@
         <a href="http://www.fundamentus.com.br/detalhes.php?papel={{ buy.stock_data.code }}"
           target="_blank">{{ buy.stock_data.code }}</a>-{{ buy.stock_data.name }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
         <span title="{{ getDateLapse(buy.creation_date) }}">({{ buy.creation_date | date: "dd.MM.y" }})</span>
-        [{{ buy.owner_data.username }}]
+        by <strong>[{{ buy.owner_data.username }}]</strong>
       </div>
       <div class="col-1" (click)="markToUpdate()">
         <ngb-rating [max]="1" [resettable]="true" [(rate)]="buy.favorite"
