--- a/src/app/operation/sell-card/sell-card.component.html
+++ b/src/app/operation/sell-card/sell-card.component.html
@@ -4,7 +4,7 @@
       <div class="col-10">
         <a href="http://www.fundamentus.com.br/detalhes.php?papel={{ sell.stock_data.code }}" target="_blank">{{ sell.stock_data.code }}</a>-{{ sell.stock_data.name }} ({{ sell.stock_data.owned }}) - {{
         sell.nickname }} <span title="{{ getDateLapse(sell.creation_date) }}">({{ sell.creation_date | date: "dd.MM.y"
-          }})</span> [{{ sell.owner_data.username }}]
+          }})</span> by <strong>[{{ sell.owner_data.username }}]</strong>
       </div> 
       <div class="col-1">
         <zen-note-modal [operation_pk]="sell.pk"></zen-note-modal>
