--- a/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
+++ b/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
@@ -7,7 +7,8 @@
 
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class="form-control form-control-sm" id="password" [(ngModel)]="userCredential.password" name="password">
+    <input type="password" class="form-control form-control-sm" id="password" [(ngModel)]="userCredential.password"
+    (keydown.enter)="userLogin()" name="password">
   </div>
 
   <button type="button" class="btn btn-primary" (click)="userLogin()">log me in</button>
