Finaly finalized the useraccount.

--- a/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
+++ b/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
@@ -1,3 +1,4 @@
+<zen-bootstrap-officer></zen-bootstrap-officer>
 <form #zentraderAuthForm="ngForm">
   <div class="form-group">
     <label for="username">Username</label>
