--- a/src/app/zen-auth/welcome-page/welcome-page.component.html
+++ b/src/app/zen-auth/welcome-page/welcome-page.component.html
@@ -8,7 +8,7 @@
       <zen-zentrader-auth></zen-zentrader-auth>
     </div>
     <div class="col-8">
-       
+      <zen-fortune-teller></zen-fortune-teller>       
     </div>
   </div>
 </div>
