--- a/src/app/operation/sell-focus/sell-focus.component.html
+++ b/src/app/operation/sell-focus/sell-focus.component.html
@@ -5,6 +5,8 @@
 
 <div class="row">
   <div class="col-12">
+    <p *ngIf="sells.length == 0">You don't have any sells. Start <a href="/buy-focus">selling</a> anything you have
+      bought.</p>
     <div class="row mt-3" *ngFor="let sell of sells">
       <div class="col-5">
         <zen-sell-card [sell]="sell" (onSellChanged)="list()"></zen-sell-card> 
