--- a/src/app/stock/resume/resume.component.html
+++ b/src/app/stock/resume/resume.component.html
@@ -5,12 +5,10 @@
       <div class="card-body">
         <h4 class="card-title">{{ resume.name }} ({{ resume.code }})</h4>
         <h6 class="card-subtitle mb-2 text-muted"><span [ngStyle]="{'color': resume.stock_result_percent | number:
-        '1.2-2' | numberColor }">{{ resume.stock_result_percent | number: '1.2-2' }}</span>%<span
-                                                                                              class="float-right">{{
-                                                                                              resume.owner }}</span> 
+        '1.2-2' | numberColor }">{{ resume.stock_result_percent | number: '1.2-2' }}</span>%<span class="float-right">{{ resume.owner }}</span> 
       / <span [ngStyle]="{'color': resume.stock_result_total_percent | number: '1.2-2' | numberColor }">{{ resume.stock_result_total_percent | number: '1.2-2' }}</span>%</h6>
         <div class="card-text">
-          <p>Avg. Price: R$ {{ resume.average_price }}</p>
+          <p>Avg. Price: R$ {{ resume.average_available_price }}</p>
           <p>Stk. Price: R$ {{ resume.price }}</p>
           <p>Owned: {{ resume.owned }}</p>
           <hr>
