--- a/src/app/operation/buy-edit/buy-edit.component.html
+++ b/src/app/operation/buy-edit/buy-edit.component.html
@@ -12,6 +12,12 @@
       </div>
 
       <div class="form-group">
+        <select [(ngModel)]="buy.category" class="form-control" name="category">
+          <option *ngFor="let category of buy.categories" [ngValue]="category[0]">{{ category[1] }}</option>
+        </select>
+      </div>
+
+      <div class="form-group">
         <button type="button" class="btn btn-primary mr-1" (click)="edit(buy);" [disabled]="!buyEditForm.form.valid">Edit
         </button>
         <zen-quick-sell class="mr-1" [operation]="getQuickSell()" (onOperationSold)="updateBuy()"></zen-quick-sell>
