--- a/src/app/operation/sell-edit/sell-edit.component.html
+++ b/src/app/operation/sell-edit/sell-edit.component.html
@@ -17,9 +17,15 @@
       </div>
 
       <div class="form-group">
-        <select [(ngModel)]="sell.category" class="form-control" name="category">
-          <option *ngFor="let category of sell.categories" [ngValue]="category[0]">{{ category[1] }}</option>
-        </select>
+        <label for="category">Category: </label>
+        <div class="row">
+          <div class="col-8">
+            <select [(ngModel)]="sell.category" class="form-control" name="category">
+              <option *ngFor="let category of sell.categories" [ngValue]="category[0]">{{ category[1] }}</option>
+            </select>
+          </div>
+          <button class="btn btn-primary" type="button" (click)="suggestCategory()">Tip</button>
+        </div>
       </div>
 
       <div class="form-group">
