Now the category is manual.

--- a/src/app/operation/sell-edit/sell-edit.component.html
+++ b/src/app/operation/sell-edit/sell-edit.component.html
@@ -24,7 +24,7 @@
               <option *ngFor="let category of sell.categories" [ngValue]="category[0]">{{ category[1] }}</option>
             </select>
           </div>
-          <button class="btn btn-primary" type="button" (click)="suggestCategory()">Tip</button>
+          <button class="btn btn-primary" type="button" (click)="suggestCategory()">Sugest</button>
         </div>
       </div>
 
