Implemented checkbox to bring the archived operations.

--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -3,6 +3,13 @@
 <zen-bootstrap-officer></zen-bootstrap-officer>
   <div class="row">
     <div class="col-12">
+      <form #buyCardForm>
+        <label for="amount">Show archived: </label>
+        <input type="checkbox" class="form-input" id="show-archived" name="show-archived"
+                                                                     [(ngModel)]="archived"
+                                                                [checked]="archived" (click)="updateArchived()">
+
+      </form>
     <p *ngIf="buys.length == 0">You don't have bought anything. Start <a href="/experience">experimenting</a> and make a buy.</p>
       <div class="row mt-3" *ngFor="let buy of buys">
         <div class="col-5">
