Bring archived operations

--- a/src/app/operation/buy-card/buy-card.component.css
+++ b/src/app/operation/buy-card/buy-card.component.css
@@ -4,6 +4,34 @@
   border-color: #47A8FF;
 }
 
+.zen-card-gain {
+  background: #B0FDB0;
+}
+
+.zen-card-lose {
+  background: #FEB2AE;
+}
+
+.zen-card-gain-archived {
+background: repeating-linear-gradient(
+  45deg,
+  #B0FDB0,
+  #B0FDD6 10px,
+  #B0FDFD 10px,
+  #B0D6FD 20px
+);
+}
+
+.zen-card-lose-archived {
+background: repeating-linear-gradient(
+  45deg,
+  #FEB2AE,
+  #FEDAAE 10px,
+  #FEB2AE 10px,
+  #FEB2AE 20px
+);
+}
+
 .star {
   font-size: 1.5rem;
   color: #EAEDEF;
