--- a/src/app/operation/buy-card/buy-card.component.html
+++ b/src/app/operation/buy-card/buy-card.component.html
@@ -1,4 +1,4 @@
-<div class="card zen-card-class" [ngStyle]="{'background': getBackgroundColor(buy)}">
+<div [ngClass]="[ 'card', 'zen-card-class', getCardClass(buy) ]">
   <div class="card-body">
     <div class="row card-title">
       <div class="col-11">
