--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -4,10 +4,14 @@
   <div class="row">
     <div class="col-8">
       <form #buyCardForm>
-        <label for="show-archived">Show archived: </label>
-        <input type="checkbox" class="form-input" id="show-archived" name="show-archived"
-                                                                     [(ngModel)]="archived"
-                                                                     [checked]="archived" (click)="updateArchived()">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label [ngClass]="['btn', 'btn-secondary', getCheckBoxLabelClass()]">
+            <input type="checkbox" class="form-input" id="show-archived" name="show-archived"
+                                                                       [(ngModel)]="archived"
+                                                                       [checked]="archived"
+                                                                         (click)="updateArchived()">Archived
+          </label>
+        </div>
       </form>
     </div>
 
