--- a/src/app/operation/sell-card/sell-card.component.html
+++ b/src/app/operation/sell-card/sell-card.component.html
@@ -1,4 +1,4 @@
-<div class="card zen-card-class" [ngStyle]="{'background': getBackgroundColor(sell)}">
+<div [ngClass]="[ 'card', 'zen-card-class', getCardClass(sell) ]">
   <div class="card-body">
     <div class="row card-title">
       <div class="col-10">
