--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -23,7 +23,7 @@
 
   <div class="row">
     <div class="col-12">
-      <p *ngIf="buys.count == 0">You don't have bought anything. Start <a href="/experience">experimenting</a> and make a buy.</p>
+      <p *ngIf="buys.count == '0'">You don't have bought anything. Start <a href="/experience">experimenting</a> and make a buy.</p>
       <div class="row mt-3" *ngFor="let buy of buys.results">
         <div class="col-5">
           <zen-buy-card [buy]="buy" (onBuyChanged)="updateBuys()"></zen-buy-card>
