--- a/src/app/operation/sell-focus/sell-focus.component.html
+++ b/src/app/operation/sell-focus/sell-focus.component.html
@@ -24,7 +24,7 @@
 
 <div class="row">
   <div class="col-12">
-    <p *ngIf="sells.count == 0">You don't have any sells. Start <a href="/buy-focus">selling</a> anything you have
+    <p *ngIf="sells.count == '0'">You don't have any sells. Start <a href="/buy-focus">selling</a> anything you have
       bought.</p>
     <div class="row mt-3" *ngFor="let sell of sells.results">
       <div class="col-5">
