--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -1,7 +1,7 @@
 <zen-menu></zen-menu>
 <div class="container-fluid">
   <zen-bootstrap-officer></zen-bootstrap-officer>
-  <div class="row">
+  <div class="row" *ngIf="buys.count">
     <div class="col-8">
       <form #buyCardForm>
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
@@ -23,7 +23,7 @@
 
   <div class="row">
     <div class="col-12">
-      <p *ngIf="buys.count == '0'">You don't have bought anything. Start <a href="/experience">experimenting</a> and make a buy.</p>
+      <p *ngIf="!buys.count">You don't have bought anything. Start <a href="/experience">experimenting</a> and make a buy.</p>
       <div class="row mt-3" *ngFor="let buy of buys.results">
         <div class="col-5">
           <zen-buy-card [buy]="buy" (onBuyChanged)="updateBuys()"></zen-buy-card>
