--- a/src/app/operation/sell-focus/sell-focus.component.html
+++ b/src/app/operation/sell-focus/sell-focus.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 <zen-bootstrap-officer></zen-bootstrap-officer>
 
-<div class="row" *ngIf="sells.count">
+<div class="row">
   <div class="col-8">
       <form #sellCardForm>
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
@@ -24,7 +24,7 @@
 
 <div class="row">
   <div class="col-12">
-    <p *ngIf="!sells.count">You don't have any sells. Start <a href="/buy-focus">selling</a> anything you have
+    <p *ngIf="!sells.results.length">You don't have any sells. Start <a href="/buy-focus">selling</a> anything you have
       bought.</p>
     <div class="row mt-3" *ngFor="let sell of sells.results">
       <div class="col-5">
