--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -4,17 +4,7 @@
 <div class="container-fluid">
   <div class="row mt-4">
       <div class="col" *ngFor="let stock of stocks; let i = index">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">{{stock.code}}</h4>
-
-            <h6 class="card-subtitle mb-2 text-muted" *ngIf="!editing[i]">{{stock.price}}</h6>
-            <zen-edit-stock *ngIf="editing[i]" [stockInput]="stock"></zen-edit-stock>
-
-            <button class="btn-sm btn-primary mt-2" (click)="emitStockClickedToEdit(stock, i)">edit</button>
-
-          </div>
-        </div>
+        <zen-stock-card [stock]="stock"></zen-stock-card>
       </div>
   </div>
 </div>
