--- a/src/app/stock/stock-card/stock-card.component.html
+++ b/src/app/stock/stock-card/stock-card.component.html
@@ -2,10 +2,8 @@
   <div class="card-body">
     <h4 class="card-title">{{stock.code}}</h4>
 
-    <h6 class="card-subtitle mb-2 text-muted" *ngIf="!editing">{{stock.price}}</h6>
-    <zen-edit-stock *ngIf="editing" [stockInput]="stock"></zen-edit-stock>
-
-    <button class="btn-sm btn-primary mt-2" (click)="toggleEdit()">edit</button>
+    <h6 class="card-subtitle mb-2 text-muted" *ngIf="!editing" (dblclick)="toggleEdit()">{{stock.price}}</h6>
+    <zen-edit-stock *ngIf="editing" [stockInput]="stock" (onStockUpdated)="updateStock($event)"></zen-edit-stock>
 
   </div>
 </div>
