--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -1,9 +1,9 @@
 <zen-menu></zen-menu>
-<zen-add-stock></zen-add-stock>
+<zen-add-stock (onStockAdded)="appendNewStock($event)"></zen-add-stock>
 
 <div class="container-fluid">
   <div class="row mt-4">
-      <div class="col" *ngFor="let stock of stocks; let i = index">
+      <div class="col-3 mb-3" *ngFor="let stock of stocks; let i = index">
         <zen-stock-card [stock]="stock"></zen-stock-card>
       </div>
   </div>
