--- a/src/app/stock/add-stock/add-stock.component.html
+++ b/src/app/stock/add-stock/add-stock.component.html
@@ -1,34 +1,59 @@
-<div class="container-fluid">
-<p>Add stock: </p>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Add Stock</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 
-  <form #addStockForm="ngForm">
-    <div class="form-group">
-      <label for="stockCode">Code: </label>
-      <input type="text" id="stockCode" class="form-control w-25" [(ngModel)]="stock.code" name="code">
+  <div class="modal-body">
+    <div class="container-fluid">
+      <form #addStockForm="ngForm">
+        <div class="row">
+          <div class="form-group">
+            <label for="stockCode">Code: </label>
+            <input type="text" id="stockCode" class="form-control w-50" [(ngModel)]="stock.code" name="code">
+          </div>
+
+          <div class="form-group">
+            <label for="stockPrice">Price: </label>
+            <input type="number" id="stockPrice" class="form-control w-50" [(ngModel)]="stock.price" name="price">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group">
+            <label for="stockPrice">Name: </label>
+            <input type="text" id="stockName" class="form-control w-75" [(ngModel)]="stock.name" name="name">
+          </div>
+
+          <div class="form-group">
+            <label for="stockSector">Sector: </label>
+            <input type="text" id="stockSector" class="form-control w-75" [(ngModel)]="stock.sector" name="sector">
+          </div>
+
+        </div>
+
+        <div class="row">
+          <div class="form-group">
+            <label for="stockSubsector">Subsector: </label>
+            <input type="text" id="stockSubsector" class="form-control" [(ngModel)]="stock.subsector" name="subsector">
+          </div>
+        </div>
+
+      </form>
     </div>
+  </div>
 
+  <div class="modal-footer">
     <div class="form-group">
-      <label for="stockPrice">Price: </label>
-      <input type="number" id="stockPrice" class="form-control w-25" [(ngModel)]="stock.price" name="price">
+      <button type="button" (click)="add(); addStockForm.reset()"
+              class="btn btn-primary" [disabled]="!addStockForm.form.valid">Add</button>
     </div>
-
     <div class="form-group">
-      <label for="stockPrice">Name: </label>
-      <input type="text" id="stockName" class="form-control w-25" [(ngModel)]="stock.name" name="name">
+      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
     </div>
+  </div>
+</ng-template>
 
-    <div class="form-group">
-      <label for="stockSector">Sector: </label>
-      <input type="text" id="stockSector" class="form-control w-25" [(ngModel)]="stock.sector" name="sector">
-    </div>
-
-    <div class="form-group">
-      <label for="stockSubsector">Subsector: </label>
-      <input type="text" id="stockSubsector" class="form-control w-25" [(ngModel)]="stock.subsector" name="subsector">
-    </div>
-
-    <button type="button" (click)="add(); addStockForm.reset()"
-            class="btn btn-primary" [disabled]="!addStockForm.form.valid">Add</button>
-
-  </form>
-</div>
+<button class="btn btn-outline-primary" style="border-right-color: #CDE5CA;" title="Add Stock" (click)="openLg(content)"><i class="fa fa-plus"></i></button>
