Translated stock and overview

--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -4,14 +4,14 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <div class="row">
       <div class="col-12 text-center">
-        <a class="p-2 text-dark" href="/stock">Stock</a> |
-        <a class="p-2 text-dark" href="/experience">Experiences</a> |
-        <a class="p-2 text-dark" href="/buy-focus">Purchases</a> |
-        <a class="p-2 text-dark" href="/sell-focus">Sales</a> |
-        <a class="p-2 text-dark" href="/operations-center">Operations Center</a>
+        <a class="p-2 text-dark" href="/stock" i18n="Stock@@stock">Stock</a> |
+        <a class="p-2 text-dark" href="/experience" i18n="Experiences@@experiences">Experiences</a> |
+        <a class="p-2 text-dark" href="/buy-focus" i18n="Purchases@@purchases">Purchases</a> |
+        <a class="p-2 text-dark" href="/sell-focus" i18n="Sales@@sales">Sales</a> |
+        <a class="p-2 text-dark" href="/operations-center" i18n="Operations Center@@operationsCenter">Operations Center</a>
       </div>
         <div class="col-12 text-center">
-        <a class="p-2 text-dark" href="/learning">Learning</a>
+        <a class="p-2 text-dark" href="/learning" i18n="Learning@@learning">Learning</a>
       </div>
     </div>
 
