--- a/src/app/operation/experience-list/experience-list.component.html
+++ b/src/app/operation/experience-list/experience-list.component.html
@@ -1,15 +1,15 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Nick</th>
-      <th scope="col">Intent</th>
-      <th scope="col">Stock</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Price</th>
-      <th scope="col">Stock Price</th>
-      <th scope="col">Target</th>
-      <th scope="col">Target Result</th>
-      <th scope="col">Actual Result</th>
+      <th scope="col" i18n="Nick EL@@nickEL">Nick</th>
+      <th scope="col" i18n="Intent EL@@IntentEL">Intent</th>
+      <th scope="col" i18n="Stock@@stock">Stock</th>
+      <th scope="col" i18n="Amount@@amount">Amount</th>
+      <th scope="col" i18n="Price@@price">Price</th>
+      <th scope="col" i18n="Stock Price@@stockPrice">Stock Price</th>
+      <th scope="col" i18n="Target@@target">Target</th>
+      <th scope="col" i18n="Target Result@@targetResult">Target Result</th>
+      <th scope="col" i18n="Actual Result@@actualResult">Actual Result</th>
     </tr>
   </thead>
   <tbody>
