--- a/src/app/stock/edit-stock/edit-stock.component.html
+++ b/src/app/stock/edit-stock/edit-stock.component.html
@@ -9,7 +9,7 @@
           <button class="btn" (click)="stockSelected()">Ok</button>
         </div>
       </div>
-    <small id="stockPriceHelp" class="form-text text-muted">Update Stock price.</small>
+    <small id="stockPriceHelp" class="form-text text-muted" i18n="Update Stock price@@updateStockprice">Update Stock price.</small>
     </form>
   </div>
 </div>
