--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -19,7 +19,7 @@
     <div class="col-12">
       <div class="row">
         <div class="col-2">
-          <h4 style="color: rgba(0,0,0,0.6);">Experiments</h4>
+          <h4 style="color: rgba(0,0,0,0.6);" i18n="Experiments header@@experimentsHeader">Experiments</h4>
         </div>
         <div class="col-10">
           <zen-operation-accordion (onOperationMade)="updateExperienceList()"></zen-operation-accordion>
@@ -32,7 +32,7 @@
 
   <section class="row mb-5 mt-4">
     <div class="col-12">
-      <h4 style="color: rgba(0,0,0,0.6);">Wallet</h4>
+      <h4 style="color: rgba(0,0,0,0.6);" i18n="Wallet header@@walletHeader">Wallet</h4>
       <hr>
       <zen-resume></zen-resume>
     </div>
