--- a/src/app/stock/add-stock/add-stock.component.html
+++ b/src/app/stock/add-stock/add-stock.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h4 class="modal-title">Add Stock</h4>
+    <h4 class="modal-title" i18n="Add Stock@@addStockASC">Add Stock</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -11,24 +11,24 @@
       <form #addStockForm="ngForm">
         <div class="row">
           <div class="form-group">
-            <label for="stockCode">Code: </label>
+            <label for="stockCode" i18n="Code@@codeAS">Code: </label>
             <input type="text" id="stockCode" class="form-control w-50" [(ngModel)]="stock.code" name="code">
           </div>
 
           <div class="form-group">
-            <label for="stockPrice">Price: </label>
+            <label for="stockPrice" i18n="Price@@priceAS">Price: </label>
             <input type="number" id="stockPrice" class="form-control w-50" [(ngModel)]="stock.price" name="price">
           </div>
         </div>
 
         <div class="row">
           <div class="form-group">
-            <label for="stockPrice">Name: </label>
+            <label for="stockPrice" i18n="Name@@nameAS">Name: </label>
             <input type="text" id="stockName" class="form-control w-75" [(ngModel)]="stock.name" name="name">
           </div>
 
           <div class="form-group">
-            <label for="stockSector">Sector: </label>
+            <label for="stockSector" i18n="Sector@@sectorAS">Sector: </label>
             <input type="text" id="stockSector" class="form-control w-75" [(ngModel)]="stock.sector" name="sector">
           </div>
 
@@ -36,7 +36,7 @@
 
         <div class="row">
           <div class="form-group">
-            <label for="stockSubsector">Subsector: </label>
+            <label for="stockSubsector" i18n="Subsector@@subsectorAS">Subsector: </label>
             <input type="text" id="stockSubsector" class="form-control" [(ngModel)]="stock.subsector" name="subsector">
           </div>
         </div>
@@ -48,10 +48,10 @@
   <div class="modal-footer">
     <div class="form-group">
       <button type="button" (click)="add(); addStockForm.reset()"
-              class="btn btn-primary" [disabled]="!addStockForm.form.valid">Add</button>
+              class="btn btn-primary" [disabled]="!addStockForm.form.valid" i18n="Add@@add">Add</button>
     </div>
     <div class="form-group">
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+      <button type="button" class="btn btn-light" (click)="modal.close('Close click')" i18n="Close@@close">Close</button>
     </div>
   </div>
 </ng-template>
