--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -5,11 +5,11 @@
         <h4 class="card-title" style="font-size: 1.2rem;"><span>{{ buy.stock_data.name }} ({{ buy.stock_data.code }})</span></h4>
         <h6 title="{{ getDateLapse(buy.creation_date) }}" class="card-subtitle mb-2 text-muted">{{ buy.nickname || "A nickless buy "}}  {{ buy.creation_date | date: "dd.MM.y" }}</h6>
         <div class="card-text">
-          <p>Buy Price: R$ {{ buy.price }}</p>
-          <p>Stock Price: R$ {{ buy.stock_data.price }}</p>
-          <p>Amount: {{ buy.amount }}</p>
+          <p i18n="BuyPrice@@buyPriceBL">Buy Price: R$ {{ buy.price }}</p>
+          <p i18n="Stock@@stockBL">Stock Price: R$ {{ buy.stock_data.price }}</p>
+          <p i18n="Amount@@amountBL">Amount: {{ buy.amount }}</p>
           <hr>
-          <p>Profit: <span [ngStyle]="{'color': buy.operation_gain | number: '1.2-2' | numberColor }">{{
+          <p i18n="Profit@@profitBL">Profit: <span [ngStyle]="{'color': buy.operation_gain | number: '1.2-2' | numberColor }">{{
               buy.operation_gain | number: '1.2-2' }}</span>/ <span [ngStyle]="{'color': buy.operation_gain_percent |
               number: '1.2-2' | numberColor }">{{ buy.operation_gain_percent | number: '1.2-2' }}</span>%</p>
           
